# MirrorMe

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUBMISSION_TINY_TOOL_TOWN.md
.github/workflows/: release.yml
src/: app.manifest  main.cpp
